🔥 feat: 01_数据结构与算法简介.md

--- a/docs/01_数据结构与算法简介.md
+++ b/docs/01_数据结构与算法简介.md
@@ -22,8 +22,8 @@
 
 ## 4. 将要学习的算法 🧮
 
-🔸 链表 -> 遍历链表、删除链表节点
+🔹 链表 ➡︎ 遍历链表、删除链表节点
 
-🔸 树/图 -> 深度/广度优先遍历
+🔹 树/图 ➡︎ 深度/广度优先遍历
 
-🔸 数组 -> 冒泡/选择/插入/归并/快速排序、顺序/二分搜索
+🔹 数组 ➡︎ 冒泡/选择/插入/归并/快速排序、顺序/二分搜索
