🔥 feat: 02_时间复杂度和空间复杂度.md

--- a/docs/md/02_时间复杂度和空间复杂度.md
+++ b/docs/md/02_时间复杂度和空间复杂度.md
@@ -50,3 +50,31 @@ while (i < n) {
 🔸 一个函数，通常用一个大写的 O 来表示，比如 O(1)、O(n)、O(n^2)...
 
 🔸 算法在运行过程中临时占用存储空间大小的量度
+
+```js
+// O(1)
+
+let i = 0;
+i += 1;
+```
+
+```js
+// O(n)
+
+const list = [];
+for (let i = 0; i < n; i++) {
+  list.push(i);
+}
+```
+
+```js
+// O(n²)
+
+const matrix = [];
+for (let i = 0; i < n; i++) {
+  matrix.push([]);
+  for (let j = 0; j < n; j++) {
+    matrix[i].push(j);
+  }
+}
+```
