--- a/docs/md/03_栈.md
+++ b/docs/md/03_栈.md
@@ -2,6 +2,8 @@
 
 ### 1. 栈是什么❓
 
+<img src="https://iamzjt-1256754140.cos.ap-nanjing.myqcloud.com/images/202304151313255.png" width="600" alt="03_01_栈"/>
+
 🔸 一个后进先出的数据结构
 
 🔸 JavaScript中没有栈，但是可以用Array来模拟实现栈的所有功能
@@ -24,25 +26,31 @@
 
 ### 3. 栈的应用
 
-🔸 递归
+#### 3.1. 十进制转二进制
 
-🔸 括号匹配
+<img src="https://iamzjt-1256754140.cos.ap-nanjing.myqcloud.com/images/202304151319606.png" width="600" alt="03_02_十进制转二进制"/>
 
-🔸 函数调用栈
+🔸 后出来的余数反而排在前面
 
-🔸 浏览器的前进后退
+🔸 把余数依次入栈，然后再出栈，就可以实现余数倒序输出
 
-🔸 撤销操作
+#### 3.2. 有效的括号
 
-🔸 二叉树的遍历
+<img src="https://iamzjt-1256754140.cos.ap-nanjing.myqcloud.com/images/202304151337288.png" width="600" alt="03_03_有效的括号"/>
 
-🔸 深度优先搜索
+🔸 越靠后的左括号，对应的有括号越靠前
 
-🔸 汉诺塔
+🔸 左括号入栈，右括号出栈，最后栈空了就是有效的括号
 
-🔸 逆波兰表达式
+#### 3.3. 函数调用堆栈
 
-🔸 进制转换
+<img src="https://iamzjt-1256754140.cos.ap-nanjing.myqcloud.com/images/202304151502214.png" width="600" alt="03_04_函数调用堆栈"/>
+
+🔸 最后调用的函数，最先执行完
+
+🔸 函数调用时，将函数压入栈中，函数执行完毕后，再将其从栈中弹出
+
+🔸 JS解释器使用栈来控制函数的调用顺序
 
 ### 4. 栈的实现
 
