🔥 feat: [20]有效的括号.md

--- a/leetcode/[20]有效的括号.md
+++ b/leetcode/[20]有效的括号.md
@@ -1,4 +1,6 @@
-# [20]有效的括号
+# 【20】有效的括号
+
+### 一、问题描述
 
 > 给定一个只包括 '('，')'，'{'，'}'，'['，']'的字符串 s ，判断字符串是否有效。
 > 
@@ -24,6 +26,8 @@
 s 仅由括号 '()[]{}' 组成
 
 [LeetCode_链接](https://leetcode.cn/problems/valid-parentheses)
+
+### 二、解答
 
 ```ts
 function isValid(s: string): boolean {
