--- a/docs/md/08_树.md
+++ b/docs/md/08_树.md
@@ -30,6 +30,22 @@
 
 🔸 对根节点的 children 挨个进行深度优先遍历
 
+```js
+const dfs = (root) => {
+	console.log(root.val);
+	root?.children.forEach(dfs);
+};
+```
+
+详细实现可见：[dfs.js](https://github.com/iamzjt-front-end/algorithm-study/blob/main/dataStructure/tree/dfs.js)
+
+
+#### 2.3. 广度优先遍历的实现
+
+
+
+
+
 
 ### 3. 
 
