📝 feat: 🌲树的广度优先遍历

--- a/docs/md/08_树.md
+++ b/docs/md/08_树.md
@@ -39,15 +39,26 @@ const dfs = (root) => {
 
 详细实现可见：[dfs.js](https://github.com/iamzjt-front-end/algorithm-study/blob/main/dataStructure/tree/dfs.js)
 
-
 #### 2.3. 广度优先遍历的实现
 
+🔸 新建一个队列，把根节点入队
 
+🔸 把队头出队并访问
 
+🔸 把队头的 children 挨个入队
 
+🔸 重复第二、三步，直到队列为空
 
+```js
+const bfs = (root) => {
+	const q = [root];
 
-### 3. 
+	while(q.length) {
+		const n = q.shift();
+		console.log(n.val);
+		n?.children.forEach(item => q.push(item));
+	}
+};
+```
 
-
-### 4. 树的实现
+详细实现可见：[bfs.js](https://github.com/iamzjt-front-end/algorithm-study/blob/main/dataStructure/tree/bfs.js)
