📝 feat: 二叉树的先序遍历实现

--- a/docs/md/08_树.md
+++ b/docs/md/08_树.md
@@ -2,8 +2,6 @@
 
 ### 1. 树是什么❓
 
-<img src="https://iamzjt-1256754140.cos.ap-nanjing.myqcloud.com/images/202304180541599.png" width="400" alt="08_01_树"/>
-
 🔸 一种**分层**数据的抽象结构
 
 🔸 前端工作中常见的树：DOM树、级联选择、树形控件
@@ -11,6 +9,8 @@
 🔸 JS中没有树，但是可以用 Object 和 Array 构建树
 
 🔸 树的常用操作：深度/广度优先遍历、先中后序遍历
+
+<img src="https://iamzjt-1256754140.cos.ap-nanjing.myqcloud.com/images/202304180541599.png" width="400" alt="08_01_树"/>
 
 ### 2. 树的深度与广度优先遍历
 
@@ -62,3 +62,23 @@ const bfs = (root) => {
 ```
 
 详细实现可见：[bfs.js](https://github.com/iamzjt-front-end/algorithm-study/blob/main/dataStructure/tree/bfs.js)
+
+### 3. 二叉树是什么❓
+
+🔸 树中每个节点最多只能有两个子节点
+
+🔸 在 JS 中，通常用 Object 来模拟二叉树
+
+<img src="https://iamzjt-1256754140.cos.ap-nanjing.myqcloud.com/images/202304180659823.png" width="400" alt="08_04_二叉树"/>
+
+#### 3.1. 先序遍历的实现（根 → 左 → 右）
+
+<img src="https://iamzjt-1256754140.cos.ap-nanjing.myqcloud.com/images/202304180702549.png" width="400" alt="08_05_先序遍历"/>
+
+🔸 访问**根**节点
+
+🔸 对根节点的**左**子树进行先序遍历
+
+🔸 对根节点的**右**子树进行先序遍历
+
+详细实现可见：[preorder.js](https://github.com/iamzjt-front-end/algorithm-study/blob/main/dataStructure/tree/preorder.js)
