📝 feat: 二叉树的中序遍历实现

--- a/docs/md/08_树.md
+++ b/docs/md/08_树.md
@@ -82,3 +82,15 @@ const bfs = (root) => {
 🔸 对根节点的**右**子树进行先序遍历
 
 详细实现可见：[preorder.js](https://github.com/iamzjt-front-end/algorithm-study/blob/main/dataStructure/tree/preorder.js)
+
+#### 3.2. 中序遍历的实现（左 → 根 → 右）
+
+<img src="https://iamzjt-1256754140.cos.ap-nanjing.myqcloud.com/images/202304180825591.png" width="400" alt="08_06_中序遍历"/>
+
+🔸 对根节点的**左**子树进行中序遍历
+
+🔸 访问**根**节点
+
+🔸 对根节点的**右**子树进行中序遍历
+
+详细实现可见：[inorder.js](https://github.com/iamzjt-front-end/algorithm-study/blob/main/dataStructure/tree/inorder.js)
