📝 feat: 二叉树的后序遍历实现

--- a/docs/md/08_树.md
+++ b/docs/md/08_树.md
@@ -94,3 +94,15 @@ const bfs = (root) => {
 🔸 对根节点的**右**子树进行中序遍历
 
 详细实现可见：[inorder.js](https://github.com/iamzjt-front-end/algorithm-study/blob/main/dataStructure/tree/inorder.js)
+
+#### 3.3. 后序遍历的实现（左 → 右 → 根）
+
+<img src="https://iamzjt-1256754140.cos.ap-nanjing.myqcloud.com/images/202304180840979.png" width="400" alt="08_07_后序遍历"/>
+
+🔸 对根节点的**左**子树进行后序遍历
+
+🔸 对根节点的**右**子树进行后序遍历
+
+🔸 访问**根**节点
+
+详细实现可见：[postorder.js](https://github.com/iamzjt-front-end/algorithm-study/blob/main/dataStructure/tree/postorder.js)
