--- a/leetcode/[144]二叉树的前序遍历.md
+++ b/leetcode/[144]二叉树的前序遍历.md
@@ -1,13 +1,60 @@
 # [144]二叉树的前序遍历
 
-[//]: # (TODO 学完树以后再来用 栈 来解决这个问题)
+### 一、问题描述
 
->
+> 给你二叉树的根节点 root ，返回它节点值的 前序 遍历。
 
-[LeetCode_链接]()
+示例 1：
+输入：root = [1,null,2,3]
+输出：[1,2,3]
+
+示例 2：
+输入：root = []
+输出：[]
+
+示例 3：
+输入：root = [1]
+输出：[1]
+
+示例 4：
+输入：root = [1,2]
+输出：[1,2]
+
+示例 5：
+输入：root = [1,null,2]
+输出：[1,2]
+
+提示：
+树中节点数目在范围 [0, 100] 内
+-100 <= Node.val <= 100
+
+进阶：递归算法很简单，你可以通过迭代算法完成吗？
+
+[LeetCode_链接](https://leetcode.cn/problems/binary-tree-preorder-traversal/)
+
+### 二、解答
 
 ```ts
+/**
+ * Definition for a binary tree node.
+ * class TreeNode {
+ *     val: number
+ *     left: TreeNode | null
+ *     right: TreeNode | null
+ *     constructor(val?: number, left?: TreeNode | null, right?: TreeNode | null) {
+ *         this.val = (val===undefined ? 0 : val)
+ *         this.left = (left===undefined ? null : left)
+ *         this.right = (right===undefined ? null : right)
+ *     }
+ * }
+ */
+
+function preorderTraversal(root: TreeNode | null): number[] {
+
+};
 ```
+
+### 三、复杂度
 
 🔸 时间复杂度：
 
