--- a/leetcode/[144]二叉树的前序遍历.md
+++ b/leetcode/[144]二叉树的前序遍历.md
@@ -50,12 +50,7 @@
  */
 
 function preorderTraversal(root: TreeNode | null): number[] {
-  if (!root) return [];
-  const arr: number[] = [];
-  arr.push(root.val);
-  arr.push(...preorderTraversal(root.left));
-  arr.push(...preorderTraversal(root.right));
-  return arr;
+  return root ? [root.val, ...preorderTraversal(root.left), ...preorderTraversal(root.right)] : []
 };
 ```
 
