✅ [144]二叉树的前序遍历.md

--- a/leetcode/[144]二叉树的前序遍历.md
+++ b/leetcode/[144]二叉树的前序遍历.md
@@ -48,10 +48,38 @@
  *     }
  * }
  */
+```
 
+#### 解法一：
+
+> 解答思路：递归
+
+```ts
 function preorderTraversal(root: TreeNode | null): number[] {
-  return root ? [root.val, ...preorderTraversal(root.left), ...preorderTraversal(root.right)] : []
+  if (!root) return;
+  const arr: number[] = [];
+  arr.push(root.val);
+  arr.concat(preorderTraversal(root.left));
+  arr.concat(preorderTraversal(root.right));
+  return arr;
 };
+```
+
+```ts
+// 优化一下 -> 一行代码
+function preorderTraversal(root: TreeNode | null): number[] {
+  return root ? [root.val, ...preorderTraversal(root.left), ...preorderTraversal(root.right)] : [];
+}
+```
+
+#### 解法二：
+
+> 解答思路：栈
+
+```ts
+function preorderTraversal(root: TreeNode | null): number[] {
+  
+}
 ```
 
 ### 三、复杂度
