✅ [144]二叉树的前序遍历.md

--- a/leetcode/[144]二叉树的前序遍历.md
+++ b/leetcode/[144]二叉树的前序遍历.md
@@ -78,7 +78,16 @@ function preorderTraversal(root: TreeNode | null): number[] {
 
 ```ts
 function preorderTraversal(root: TreeNode | null): number[] {
-  
+  const stack = [];
+  const res = [];
+  if (root) stack.push(root);
+  while (stack.length) {
+    const peek = stack.pop();
+    res.push(peek.val);
+    if (peek.right) stack.push(peek.right);
+    if (peek.left) stack.push(peek.left);
+  }
+  return res;
 }
 ```
 
