--- a/leetcode/[144]二叉树的前序遍历.md
+++ b/leetcode/[144]二叉树的前序遍历.md
@@ -2,35 +2,9 @@
 
 ### 一、问题描述
 
-> 给你二叉树的根节点 root ，返回它节点值的 前序 遍历。
-
-示例 1：
-输入：root = [1,null,2,3]
-输出：[1,2,3]
-
-示例 2：
-输入：root = []
-输出：[]
-
-示例 3：
-输入：root = [1]
-输出：[1]
-
-示例 4：
-输入：root = [1,2]
-输出：[1,2]
-
-示例 5：
-输入：root = [1,null,2]
-输出：[1,2]
-
-提示：
-树中节点数目在范围 [0, 100] 内
--100 <= Node.val <= 100
-
-进阶：递归算法很简单，你可以通过迭代算法完成吗？
-
 [LeetCode_链接](https://leetcode.cn/problems/binary-tree-preorder-traversal/)
+
+<img src="https://github.com/iamzjt-front-end/algorithm-study/blob/main/docs/images/question/144.二叉树的前序遍历.png" width="1200" alt="144.二叉树的前序遍历.png"/>
 
 ### 二、解答
 
